added entityloadsystem. updated inputsystem. filled out rendersystem a bit. now it draws some boxes

--- a/web/index.html
+++ b/web/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html>
   <head>
-    <title>Hackathon Simulator 2014</title>
     <link type="text/css" rel="stylesheet" href="hacksim.css">
   </head>
   <body>
-    <h1>Hackathon Simulator 2014</h1>
     <div id="container">
       <canvas id="area" width="500px" height="800px"></canvas>
     </div>
